# interscalene-block-segmentation

./: .gitignore  INSTALLATION_COMPLETE.md  LICENSE  MODULAR_PIPELINE_SUMMARY.md  OUTPUT_EXPLANATION.md  PUSH_TO_GITHUB.md  QUICKSTART.md  README.md  README_MODULAR.md  README_VIDEO_PROCESSING.md  SETUP.md  TROUBLESHOOTING.md  process_medsam2.py  process_videos_with_medsam2.py  pyproject.toml  requirements.txt  run_yolo_on_dicom.py  test_yolov8.py
medsam2_pipeline/: __init__.py  processor.py
src/: process_medsam2.py
src/medsam2_pipeline/: input_handlers.py  pipeline.py
src/yolo/: __init__.py  dataset_prep.py  helpers.py  test_yolov8.py  yolov8.py  yolov8_prep.py
tests/: test_pipeline.py  test_video_processing.py
